# Data-Manage-AI

./: .cursorignore  .env_bash  .gitignore  LICENSE.md  README.md  bash_env  deploy.sh  docker-compose.yml  env.example  justfile  publish-docker.sh  setpath.bat
ashared/: pyproject.toml  setup.py
ashared/supercog/shared/: __init__.py  agent_states.py  apubsub.py  credentials.py  logging.py  models.py  noprofile.py  oauth_utils.py  profiler.py  pubsub.py  services.py  utils.py
ashared/tests/: test_secrets.py
dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  dashboard.sh  fly.toml  listen.py  publish.py  pyproject.toml  requirements.txt  rxconfig.py  shell_start.py
dashboard/alembic/: env.py
dashboard/alembic/versions/: 07256b8f260c_.py  0f5305681809_.py  124846ecf248_.py  1ca3c7ed5d80_.py  20b089ab721f_.py  24bbe7266ce5_.py  26fe89b1e190_.py  277a84f6cdcf_.py  37aad3b9ef42_.py  3dae8f5f4720_.py  47b58f81639e_.py  4a8be7c11619_.py  533d14743ef6_.py  5e578b533622_.py  612be2597b79_.py  65778ea73668_.py  71ae7fb35e76_.py  854cb8906e2d_.py  94f6e2a36a67_.py  9c4a3fac6d1c_.py  9f2b081be91f_.py  a08cda3c4278_.py  a12bcefcdf98_.py  aa6a26d30a8f_.py  ac93ad9b7948_.py  ada60a594aab_.py  b5374f9878e1_.py  bd227984734a_.py  be23f2d65251_.py  c0fa08cb0ca0_.py  c5134a5617fa_.py  c949f9b00844_.py  cc30848cb34f_.py  d0ff3be32413_.py  d5048969f5ba_.py  d7fa668a7cb9_.py  d90a61f931fb_.py  e1ed343e5562_.py  e2439f7f522a_.py  e4838887da32_.py  (+4 more)
dashboard/assets/: custom.js  guest_frame.html  privacy.html  styles.css
dashboard/content/: CHANGELOG.md  EMAIL_CONFIRM.md  EMAIL_TRIGGER_HELP.md  GETTING_STARTED.md  KEY_NEEDED.md  PERMISSIONS.md  PWRESET.md  help.md
dashboard/homepage/: .gitignore  README.md  global.css  index.css  index.html  package-lock.json  package.json  privacy.css  privacy.html  script.js
dashboard/homepage/public/: image-1.2@2x.dfr  image-2@2x-src.dfr  image-3@2x.dfr
dashboard/scratchpad/: tool_approval.py
dashboard/server/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf
dashboard/supercog/dashboard/: README.md  admin_state.py  agents_common_state.py  connections_state.py  costs.py  create_agent_state.py  dashboard.py  datums_state.py  editor_state.py  engine_client.py  examples.yaml  filespage_state.py  global_state.py  guest_state.py  images.py  import_export.py  index_state.py  login_state.py  metacommands.py  models.py  prompt_helpers.py  ragindex_state.py  settings_state.py  slack_state.py  state_models.py  styles.py  utils.py
dashboard/supercog/supercog/: __init__.py
dashboard/system_agents/: 10_supercog_agent.md  14_slack_agent.md  20_weather_demo_agent.md  40_meeting_research_agent.md  50_morning_news_report.md  60_deep_researcher.md  70_email_subjects_scraper.md  80_load_leads_agent.md  __cocktail_agent.md  __supercog_qa_chatbot.md  __template.md
dashboard/tests/: test_agent_markdown_parsing.py  test_models.py
engine/: Dockerfile  README.md  agents.sh  build.sh  engine_schema.sql  fly.toml  init_db.sh  pyproject.toml  shell_start.py  slack.sh  startup.sh  test.py  triggersvc.sh
engine/alembic/: env.py
engine/alembic/versions/: 05d22de16718_.py  05ea3cd9e78f_.py  0a1598f70b9d_.py  1201b524d4df_.py  12b381495e47_.py  150c70b5dc2e_.py  2f14fd3daaa2_.py  33e9e9f250d7_.py  382e51e49046_.py  3d94000b4d4f_.py  4a9da2320f21_.py  5b5139fcc1ae_.py  5bdc273cc60f_.py  693ae09dc797_.py  722cd8129182_.py  759efe09d366_.py  822be8d2fe92_.py  8c33b10c2bc0_.py  8f4885c7a4f7_.py  a303610d176b_.py  b103e0c542e8_.py  b40f446ca242_.py  b89f2334cf2a_.py  b8ee64a0bf68_.py  bd8f28a5acc5_initial_migration.py  d86d2818937e_.py  e82ad09d36d3_.py  f18b8086035b_.py  f3a590393799_.py  f3a8b9c01d2e_.py
engine/prompts/: Masishitanto.prompt  agent_instructions.prompt  create_table_accounts.sql  credentials_service.ai  logos.ai  meeting.md  meeting_summary.ai  meeting_summary2.ai  privacy_page.ai  submissiontrigger.java  supercog_agent.prompt  supercog_marketing.prompt  tool_factory_builder.prompt  warner_opps_agents.ai  warner_refactor.prompt
engine/supercog/engine/: agent_dispatcher.py  agent_learning.py  all_tools.py  all_triggers.py  chat_logger.py  chatengine.py  db.py  doc_source_factory.py  email_utils.py  enginemgr.py  file_utils.py  filesystem.py  jwt_auth.py  main.py  (+8 more)
engine/tests/: test_agent_states.py  test_api.py  test_assets.py  test_auth_rest_tool.py  test_browser_tool.py  test_doc_index.py  test_dynamic_tools.py  test_events.py  test_file_tool.py  test_helpers.py  test_native_interpreter.py  test_playwright.py  test_rest_apiv2_tool.py  test_salesforce.py  test_slack_tool.py  test_tools.py  test_zyte.py
triggersvc/: README.md  pyproject.toml  triggersvc.sh
triggersvc/prompts/: api.ai
(+172 files in other folders)
