[tool.poetry]
name = "monster-shared"
version = "0.1.0"
description = ""
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
sqlmodel = "^0.0.14"
cryptography = "^42.0.2"
pytest = "^8.0.0"
psycopg2-binary = "^2.9.9"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
