[tool.poetry]
name = "monster-triggersvc"
version = "0.1.0"
description = ""
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
sqlmodel = "^0.0.14"
redis = "4.6.0"
cryptography = "^42.0.2"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
